build file architecture 002

--- a/_config.yml
+++ b/_config.yml
@@ -8,30 +8,54 @@ kramdown:
   
 # 作者信息
 author: 
-  name: jurnlee
-  email: jurnlee@sina.com
-  link: http://blog.csdn.net/jurnlee
-  weibo: http://weibo.com/jurnlee
-  github: https://github.com/jurnlee
+	name:     jurnlee
+	blogname: 筱枫夜の印像视界
+	email:  jurnlee@sina.com
+	link:   http://blog.csdn.net/jurnlee
+	weibo:  http://weibo.com/jurnlee
+	github: https://github.com/jurnlee
+	lofter: http://jurnlee.lofter.com
 
 # 站点信息
 title: jurnlee's blog 
-description: jurnlee's blog 
+description: jurnlee's blog 筱枫夜の印像视界
 url: http://jurnlee.github.io
 rss_url: /pages/atom.xml
 
 # gavatar头像及Favicon
-#gavatar: http://img.my.csdn.net/uploads/201411/21/1416528891_3612.png
-favicon:  http://img.my.csdn.net/uploads/201411/21/1416528891_9081.png
+gavatar:  http://avatar.csdn.net/7/5/E/1_jurnlee.jpg
+favicon:  http://avatar.csdn.net/7/5/E/4_jurnlee.jpg
 
 # disqus 设置
-#disqus:
-#  shortname: zmywly8866
+#	disqus:    none
+#   shortname: none
 
-# 中文本地化
+
+#-----------------定义---------------------
+#调用方式: {{ site.locals.home }}
 locals:
-  tags: 标签
-  about: 关于
-  newest: 最新文章
-  archive: 归档
-  content: 目录
+	home: 首页
+	tags: 标签
+    about: 关于
+    newest: 最新文章
+    archive: 归档
+    category: 分类
+    content: 目录
+    
+#  {{ site.links.tagslink }}
+links:
+	tagslink: /pages/tags.html
+  	aboutlink: /pages/about.html
+  	newestlink: /pages/newest.html
+ 	archivelink: /pages/archive.html
+  	contentlink: /pages/content.html
+  	categorylink: /pages/categories.html
+
+  
+constants:
+  language: 语言
+  lan_CN: 中文
+  lan_EN: 英文
+  othersite: 其他站点
+  postat: 发布于
+  detail: 详细
