--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ author:
     weibo:  http://weibo.com/jurnlee
     github: https://github.com/jurnlee
     lofter: http://jurnlee.lofter.com
+    
+test1: author reach here?
 
 # 站点信息
 title: jurnlee's blog 
