--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ kramdown:
 # 作者信息
 author: 
     name:     jurnlee
+    sitename:  xfly-jurnlee
     blogname: 筱枫夜の印像视界
     email:  jurnlee@sina.com
     link:   http://blog.csdn.net/jurnlee
